new parquet-encoding-vector module